--- a/tools/testlib/Makefile
+++ b/tools/testlib/Makefile
@@ -1,25 +1,25 @@
 # Makefile for building a dynamic (shared) BASIClib
 
-MAJORVER = 0
-MINORVER = 0
-REVISIONVER = 1
-WHOLEVERSION = $(MAJORVER).$(MINORVER).$(REVISIONVER)
+export MAJORVER = 0
+export MINORVER = 0
+export REVISIONVER = 1
+export WHOLEVERSION = $(MAJORVER).$(MINORVER).$(REVISIONVER)
 
-BASICLIBDIR = ../../BASIClib
+export BASICLIBDIR = ../../BASIClib
 
 about:
-	cat ../../docs/about.txt
+	@cat ../../docs/about.txt
 
 clean : 
 	rm -f core
-	rm -f *.exe
+	rm -f $(wildcard *.exe)
 	rm -f testlib
 	rm -f $(OBJS)
 
 linux : Makefile.linux
-	make -f Makefile.linux all
+	@$(MAKE) -f Makefile.linux all
 
 win32 : Makefile.win32
-	make -f Makefile.win32 all
+	@$(MAKE) -f Makefile.win32 all
 
 # end of Makefile ...
