--- a/tools/testlib/Makefile.win32
+++ b/tools/testlib/Makefile.win32
@@ -1,32 +1,23 @@
 # Makefile for building a dynamic (shared) BASIClib
 
-MAJORVER = 0
-MINORVER = 0
-REVISIONVER = 1
-WHOLEVERSION = $(MAJORVER).$(MINORVER).$(REVISIONVER)
-
-BASICLIBDIR = ./../../BASIClib
-
 OBJS = TestLib.o TestConversionFunctions.o TestOnEvents.o TestThreads.o
 
 CC = gcc
 LINKER = gcc
-ASM = nasm
 
 # Shipping command lines
 #COPTIONS = -DWIN32 -D_REENTRANT -Wall -fasm -finline-functions -I $(BASICLIBDIR) -s -O2 -c -o
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -s -O2 -o
-#ASMOPTIONS = -f elf -o
 
 # Debug command lines...
 COPTIONS = -DWIN32 -DDEBUG -D_REENTRANT -Wall -fasm -finline-functions -I $(BASICLIBDIR) -g -c -o
-LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -g -o
-ASMOPTIONS = -f elf -o
+LOPTIONS = -Wall -L $(BASICLIBDIR) -lm -g -o
+
 
 all : testlib.exe
 
 testlib.exe : $(OBJS)
-	$(LINKER) $(LOPTIONS) testlib.exe $(OBJS) $(BASICLIBDIR)/*.o
+	$(LINKER) $(LOPTIONS) testlib.exe $(OBJS) $(wildcard $(BASICLIBDIR)/*.o)
 
 TestLib.o : TestLib.c TestLib.h
 	$(CC) $(COPTIONS) TestLib.o TestLib.c
@@ -46,4 +37,4 @@ TestConversionFunctions.o : TestConversionFunctions.c \
                             $(BASICLIBDIR)/ConversionFunctions.h 
 	$(CC) $(COPTIONS) TestConversionFunctions.o TestConversionFunctions.c
 
-# end of Makefile ...
+# end of Makefile.win32 ...
