--- a/tools/testlib/Makefile.win32
+++ b/tools/testlib/Makefile.win32
@@ -1,6 +1,7 @@
 # Makefile for building a dynamic (shared) BASIClib
 
-OBJS = TestLib.o TestConversionFunctions.o TestOnEvents.o TestThreads.o
+OBJS = TestLib.o TestConversionFunctions.o TestOnEvents.o TestThreads.o \
+       TestErrorFunctions.o
 
 CC = gcc
 LINKER = gcc
@@ -36,5 +37,11 @@ TestConversionFunctions.o : TestConversionFunctions.c \
                             $(BASICLIBDIR)/BasicString.h \
                             $(BASICLIBDIR)/ConversionFunctions.h 
 	$(CC) $(COPTIONS) TestConversionFunctions.o TestConversionFunctions.c
+
+TestErrorFunctions.o : TestErrorFunctions.c \
+                            $(BASICLIBDIR)/Initialize.h \
+                            $(BASICLIBDIR)/OnEvents.h \
+                            $(BASICLIBDIR)/ErrorFunctions.h 
+	$(CC) $(COPTIONS) TestErrorFunctions.o TestErrorFunctions.c
 
 # end of Makefile.win32 ...
