updated for StringFunctions module.

--- a/BASIClib/Makefile.win32
+++ b/BASIClib/Makefile.win32
@@ -1,11 +1,5 @@
 # Makefile for building a static, win32 BASIClib  !!! For now.
 
-# !!! make these global?
-MAJORVER = 0
-MINORVER = 0
-REVISIONVER = 1
-WHOLEVERSION = $(MAJORVER).$(MINORVER).$(REVISIONVER)
-
 W32DIR = ./platform/win32
 
 LIBBASE = libBASIC
@@ -13,8 +7,8 @@ LIBWHOLE = $(LIBBASE)$(MAJORVER)$(MINORVER).a
 
 OBJS = BasicString.o ConversionFunctions.o Initialize.o OnEvents.o \
        ErrorFunctions.o MathFunctions.o InternalMemManager.o Threads.o \
-       TimeDateFunctions.o OnEventsAsm.o FileIOFunctions.o \
-       BasicFileStream.o
+       TimeDateFunctions.o OnEventsAsm.o FileIOFunctions.o BasicFileStream.o \
+       StringFunctions.o
 
 CC = gcc
 LINKER = gcc
@@ -79,6 +73,10 @@ FileIOFunctions.o : FileIOFunctions.c FileIOFunctions.h BasicString.h Variant.h
 
 OnEventsAsm.o : OnEvents.S
 	$(ASM) $(ASMOPTIONS) OnEventsAsm.o OnEvents.S
+
+StringFunctions.o : StringFunctions.c StringFunctions.h BasicString.h \
+                    ErrorFunctions.h
+	$(CC) $(COPTIONS) StringFunctions.o StringFunctions.c
 
 # end of Makefile ...
 
