--- a/tools/testlib/Makefile.win32
+++ b/tools/testlib/Makefile.win32
@@ -1,7 +1,7 @@
 # Makefile for building a dynamic (shared) BASIClib
 
 OBJS = TestLib.o TestConversionFunctions.o TestOnEvents.o TestThreads.o \
-       TestErrorFunctions.o
+       TestErrorFunctions.o TestStringFunctions.o
 
 CC = gcc
 LINKER = gcc
@@ -43,5 +43,11 @@ TestErrorFunctions.o : TestErrorFunctions.c \
                             $(BASICLIBDIR)/OnEvents.h \
                             $(BASICLIBDIR)/ErrorFunctions.h 
 	$(CC) $(COPTIONS) TestErrorFunctions.o TestErrorFunctions.c
+
+TestStringFunctions.o : TestStringFunctions.c $(BASICLIBDIR)/Initialize.h \
+                            $(BASICLIBDIR)/BasicString.h \
+                            $(BASICLIBDIR)/StringFunctions.h \
+                            $(BASICLIBDIR)/Boolean.h 
+	$(CC) $(COPTIONS) TestStringFunctions.o TestStringFunctions.c
 
 # end of Makefile.win32 ...
