updates for OnEvents stuff.

--- a/BASIClib/Makefile.win32
+++ b/BASIClib/Makefile.win32
@@ -7,7 +7,7 @@ LIBWHOLE = $(LIBBASE)$(MAJORVER)$(MINORVER).a
 
 OBJS = BasicString.o ConversionFunctions.o Initialize.o OnEvents.o \
        ErrorFunctions.o MathFunctions.o InternalMemManager.o Threads.o \
-       TimeDateFunctions.o OnEventsAsm.o FileIOFunctions.o BasicFileStream.o \
+       TimeDateFunctions.o FileIOFunctions.o BasicFileStream.o \
        StringFunctions.o LowLevel.o
 
 CC = gcc
@@ -70,9 +70,6 @@ BasicFileStream.o : BasicFileStream.c BasicFileStream.h
 
 FileIOFunctions.o : FileIOFunctions.c FileIOFunctions.h BasicString.h Variant.h
 	$(CC) $(COPTIONS) FileIOFunctions.o FileIOFunctions.c
-
-OnEventsAsm.o : OnEvents.S
-	$(ASM) $(ASMOPTIONS) OnEventsAsm.o OnEvents.S
 
 StringFunctions.o : StringFunctions.c StringFunctions.h BasicString.h \
                     ErrorFunctions.h
