--- a/BASIClib/Makefile.linux
+++ b/BASIClib/Makefile.linux
@@ -7,7 +7,8 @@ DYNLIBMAJOR = $(DYNLIBBASE).$(MAJORVER)
 OBJS = BasicString.o ConversionFunctions.o Initialize.o OnEvents.o \
        ErrorFunctions.o MathFunctions.o InternalMemManager.o Threads.o \
        TimeDateFunctions.o FileIOFunctions.o BasicFileStream.o \
-       StringFunctions.o LowLevel.o SignalHandlers.o
+       StringFunctions.o LowLevelFunctions.o SignalHandlers.o \
+       ConsoleFunctions.o PenFunctions.o
 
 CC = gcc
 LINKER = gcc
@@ -78,12 +79,18 @@ StringFunctions.o : StringFunctions.c StringFunctions.h BasicString.h \
                     ErrorFunctions.h
 	$(CC) $(COPTIONS) StringFunctions.o StringFunctions.c
 
-LowLevel.o : LowLevel.c LowLevel.h
-	$(CC) $(COPTIONS) LowLevel.o LowLevel.c
+LowLevelFunctions.o : LowLevelFunctions.c LowLevelFunctions.h
+	$(CC) $(COPTIONS) LowLevelFunctions.o LowLevelFunctions.c
 
 SignalHandlers.o : SignalHandlers.c SignalHandlers.h
 	$(CC) $(COPTIONS) SignalHandlers.o SignalHandlers.c
 
+ConsoleFunctions.o : ConsoleFunctions.c ConsoleFunctions.h Threads.h \
+                     Boolean.h Initialize.h ErrorFunctions.h
+	$(CC) $(COPTIONS) ConsoleFunctions.o ConsoleFunctions.c
+
+PenFunctions.o : PenFunctions.c PenFunctions.h ErrorFunctions.h
+	$(CC) $(COPTIONS) PenFunctions.o PenFunctions.c
 
 # end of Makefile ...
 
