--- a/tools/testlib/Makefile.linux
+++ b/tools/testlib/Makefile.linux
@@ -7,12 +7,12 @@ CC = gcc
 LINKER = gcc
 
 # Shipping command lines
-#COPTIONS = -D_REENTRANT -Wall -fasm -finline-functions -I $(BASICLIBDIR) -s -O2 -c -o
+#COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUX -Wall -fasm -finline-functions -I $(BASICLIBDIR) -s -O2 -c -o
 #LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -s -O2 -o
 
 # Debug command lines...
-COPTIONS = -D_REENTRANT -Wall -fasm -finline-functions -I $(BASICLIBDIR) -DDEBUG -g -c -o
-LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -g -o
+COPTIONS = -D_REENTRANT -DLANG_ENGLISH -DLINUX -Wall -fasm -finline-functions -I $(BASICLIBDIR) -DDEBUG -g -c -o
+LOPTIONS = -Wall -L $(BASICLIBDIR) -lBASIC -lm -lpthread -lncurses -g -o
 
 all : linux
 
